--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "azure-storage-blob (>=12.28.0,<13.0.0)"
 ]
 
 
