--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "azure-storage-blob (>=12.28.0,<13.0.0)"
+    "azure-storage-blob (>=12.28.0,<13.0.0)",
+    "duckdb (>=1.4.4,<2.0.0)"
 ]
 
 
